--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -47,7 +47,7 @@
         </action>
         <action id="in.hocg.intellij.codeview.action.ShareSelectTextAction"
                 class="in.hocg.intellij.codeview.action.ShareSelectTextAction"
-                text="分享选中行">
+                text="分享选中内容">
             <!--[编辑框] -右键-> [浮窗] -->
             <add-to-group group-id="EditorPopupMenu" anchor="last"/>
             <add-to-group group-id="ChangesViewPopupMenu" anchor="last"/>
