--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,8 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-//    implementation "com.squareup.okhttp3:okhttp:4.3.0"
     implementation 'com.beust:klaxon:5.0.1'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.10'
+    testImplementation 'org.apache.httpcomponents:httpclient:4.5.10'
 }
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
